# AssetPac

./: CMakeLists.txt  asset.cpp  asset.hpp  main.cpp
include/: assert.hpp  asset.hpp  asset_packer.hpp  asset_type.hpp  base.hpp  types.hpp
src/Packer/: CMakeLists.txt  asset.cpp  asset_packer.cpp  main.cpp
src/Viewer/: CMakeLists.txt
